@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.19
 
+	- The scheduler would not timeout printers when only
+	  using SLP browsing.
 	- If the scheduler was unable to execute a filter, it
 	  would try to restart the job indefinitely until the
 	  filter could be executed.
